--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
                             <p class="pricing__heading-text">Choose the nature of your business or the type of industry you are involved in?</p>
                         </div>
                         <div class="card__box">
-                            <button class="card__box-item price-btns" id='' href="#business" onclick="busfirstPrice()">
+                            <button class="card__box-item price-btns bt" id='' href="#business" onclick="busfirstPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -61,7 +61,7 @@
                                     <p class="card__box-text">Package is tailored for businesses looking to sell products or services online. It includes all the features of the Business Package, along with additional e-commerce-specific functionalities.</p>
                                 </div>
                             </button>
-                            <button class="card__box-item price-btns active" href="#commerce" onclick="comfirstPrice()">
+                            <button class="card__box-item price-btns bt active" href="#commerce" onclick="comfirstPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -70,7 +70,7 @@
                                     <p class="card__box-text">The Business Package is designed to cater to small and medium-sized businesses. It includes essential web development and marketing services to establish a strong online presence.</p>
                                 </div>
                             </button>
-                            <button class="card__box-item price-btns" href="#custom" onclick="customPrice()">
+                            <button class="card__box-item price-btns bt" href="#custom" onclick="customPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -86,7 +86,7 @@
             <section class="main__inclusive">
                 <div class="container">
                     <div class="inclusive__inner">
-                        <div class="inclusive__box " id="business">
+                        <div class="inclusive__box box-hover" id="business">
                             <div class="inclusive__box-img">
                                 <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                 <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -181,7 +181,7 @@
                             </div>
                             <button class="inclusive__button price-btns button" href="#bus__disc-first" onclick="comPrice()">Need an additional discount?</button>
                         </div>
-                        <div class="inclusive__box box-two active" id="commerce">
+                        <div class="inclusive__box box-two active box-hover" id="commerce">
                             <div class="inclusive__box-img">
                                 <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                 <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -276,7 +276,7 @@
                             </div>
                             <button class="inclusive__button price-btns button" href="#com__disc-first" onclick="businessPrice()">Need an additional discount?</button>
                         </div>
-                        <div class="inclusive__box box-three" id="custom">
+                        <div class="inclusive__box box-three box-hover" id="custom">
                             <div class="inclusive__box-img">
                                 <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                 <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -465,7 +465,7 @@
                                 </div>
                             </div>
                             <div class="inclusive__btn-box">
-                                <button class="inclusive__btns button return" href="#business" onclick="comfirstPrice()">Return to monthly subscription</button>
+                                <button class="inclusive__btns button return" href="#business" onclick="busfirstPrice()">Return to monthly subscription</button>
                                 <button class="inclusive__btn price-btns button" href="#bus__disc-second" onclick="comsPrice()">Need an additional discount?</button>
                             </div>
                         </div>
@@ -564,7 +564,7 @@
                                 </div>
                             </div>
                             <div class="inclusive__btn-box">
-                                <button class="inclusive__btns button retur" href="#commerce" onclick="busfirstPrice()">Return to monthly subscription</button>
+                                <button class="inclusive__btns button retur" href="#commerce" onclick="comfirstPrice()">Return to monthly subscription</button>
                                 <button class="inclusive__btn price-btns button" href="#com__disc-second" onclick="businesPrice()">Need an additional discount?</button>
                             </div>
                         </div>
