--- a/pricing.html
+++ b/pricing.html
@@ -28,13 +28,13 @@
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
+                                    <a class="header__nav-link" href="#">How It Work</a>
+                                </li>
+                                <li class="header__nav-item">
                                     <a class="header__nav-link" href="showcase.html">Showcase</a>
                                 </li>
                                 <li class="header__nav-item">
                                     <a class="header__nav-link" href="pricing.html">Pricing</a>
-                                </li>
-                                <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Apply as a Talent</a>
                                 </li>
                             </ul>
                             <button class="header__nav-button button" onclick="document.location='call.html'">Book a Call</button>
