--- a/pricing.html
+++ b/pricing.html
@@ -48,11 +48,11 @@
                 <div class="container">
                     <div class="pricing__inner">
                         <div class="pricing__heading">
-                            <h1 class="pricing__heading-title">Predictable Pricing.<br>No Surprises.</h1>
-                            <p class="pricing__heading-text">Choose the nature of your business or the type of industry you are involved in?</p>
+                            <h1 class="pricing__heading-title">Discover Your Ideal<br>Subsription Package</h1>
+                            <!-- <p class="pricing__heading-text">Choose the nature of your business or the type of industry you are involved in?</p> -->
                         </div>
                         <div class="card__box">
-                            <button class="card__box-item price-btns bt" id='' href="#business" onclick="busfirstPrice()">
+                            <button class="card__box-item price-btns bt" href="#business" onclick="busfirstPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -174,7 +174,7 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__box-price">
-                                    <h1 class="inclusive__price-title">$2999/m</h1>
+                                    <h1 class="inclusive__price-title">$2999/<span>month</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -269,7 +269,7 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__box-price">
-                                    <h1 class="inclusive__price-title">$1999/m</h1>
+                                    <h1 class="inclusive__price-title">$1999/<span>month</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -459,7 +459,7 @@
                                 </div>
                                 <div class="inclusive__box-price">
                                     <h2 class="inclusive__price-sale">12% off</h2>
-                                    <h1 class="inclusive__price-title first">$15,899/6m</h1>
+                                    <h1 class="inclusive__price-title first">$15,899/<span>6 month</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -558,7 +558,7 @@
                                 </div>
                                 <div class="inclusive__box-price">
                                     <h2 class="inclusive__price-sale">12% off</h2>
-                                    <h1 class="inclusive__price-title first">$10,499/6m</h1>
+                                    <h1 class="inclusive__price-title first">$10,499/<span>6 month</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -657,7 +657,7 @@
                                 </div>
                                 <div class="inclusive__box-price">
                                     <h2 class="inclusive__price-sale">24% off</h2>
-                                    <h1 class="inclusive__price-title first">$27,499/y</h1>
+                                    <h1 class="inclusive__price-title first">$27,499/<span>year</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -753,7 +753,7 @@
                                 </div>
                                 <div class="inclusive__box-price">
                                     <h2 class="inclusive__price-sale">24% off</h2>
-                                    <h1 class="inclusive__price-title first">$18,199/y</h1>
+                                    <h1 class="inclusive__price-title first">$18,199/<span>year</span></h1>
                                     <button class="inclusive__price-btn button">Subscribe Now</button>
                                     <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                 </div>
@@ -767,8 +767,9 @@
                 <div class="container">
                     <div class="grow__inner">
                         <div class="grow__heading">
-                            <h1 class="grow__heading-title">We Help You Grow Your Business Without Growing Your Team</h1>
-                            <p class="grow__heading-text">With Crokio, you can achieve significant cost savings compared to hiring your own team of 7 professionals (including web developer, marketing specialist, iOS developer, designer, project manager, UX/UI designer and content manager) with an average salary of <span id="price">$1999</span> per month versus <span id="prices">$1999</span> per month subscription. In addition, Crokio provides a wide range of tools and services for the effective implementation of online customer presence and marketing goals.</p>
+                            <h1 class="grow__heading-title">Expand your Business Without Expanding Your Tea</h1>
+                            <!-- <p class="grow__heading-text">With Crokio, you can achieve significant cost savings compared to hiring your own team of 7 professionals (including web developer, marketing specialist, iOS developer, designer, project manager, UX/UI designer and content manager) with an average salary of <span id="price">$1999</span> per month versus <span id="prices">$1999</span> per month subscription. In addition, Crokio provides a wide range of tools and services for the effective implementation of online customer presence and marketing goals.</p> -->
+                            <p class="grow__heading-text">With Crokio, you can achieve significant cost savings compared to hiring your own team of 7 professionals (including web developer, marketing specialist, iOS developer, designer, project manager, UX/UI designer and content manager) with an average salary of $46,600 per month versus $1999 per month subscription. In addition, Crokio provides a wide range of tools and services for the effective implementation of online customer presence and marketing goals.</p>
                         </div>
                         <div class="grow__acc-box">
                             <ul class="grow__acc">
@@ -908,7 +909,7 @@
             <section class="main__testimonials panel" data-color="white">
                 <div class="container">
                     <div class="testimonials__inner">
-                        <div class="testimonials__heading">
+                        <div class="testimonials__heading price-head">
                             <h1 class="testimonials__heading-title">Testimonials</h1>
                         </div>
                         <div class="testimonials__slider-wrapper">
@@ -952,7 +953,7 @@
                                         </div>
                                         <div class="testimonials__content">
                                             <blockquote class="testimonials__content-quote">
-                                                <p>Crokio's team is outstanding, demonstrating creativity, focus, and flexibility throughout the process. I highly recommend their services to anyone in need. Their commitment to delivering first-class service sets them apart from the competition.</p>
+                                                <p>Crokio stands out from typical agencies by its profound understanding of web design, web development, and the crucial aspect of conversion. Their expertise in these areas makes them a valuable choice, and if given the opportunity, I highly recommend working with them.</p>
                                             </blockquote>
                                             <div class="testimonials__user">
                                                 <h2 class="testimonials__user-name">Lauren Gilmore</h2>
@@ -970,7 +971,7 @@
                                         </div>
                                         <div class="testimonials__content">
                                             <blockquote class="testimonials__content-quote">
-                                                <p>Crokio's team is outstanding, demonstrating creativity, focus, and flexibility throughout the process. I highly recommend their services to anyone in need. Their commitment to delivering first-class service sets them apart from the competition.</p>
+                                                <p>The team at Crokio is incredibly knowledgeable, professional, and so kind to deal with. I’m not sure I’ve ever seen anyone more dedicated to their work and customers, I would highly highly recommend them!</p>
                                             </blockquote>
                                             <div class="testimonials__user">
                                                 <h2 class="testimonials__user-name">Lauren Gilmore</h2>
@@ -988,43 +989,7 @@
                                         </div>
                                         <div class="testimonials__content">
                                             <blockquote class="testimonials__content-quote">
-                                                <p>Crokio's team is outstanding, demonstrating creativity, focus, and flexibility throughout the process. I highly recommend their services to anyone in need. Their commitment to delivering first-class service sets them apart from the competition.</p>
-                                            </blockquote>
-                                            <div class="testimonials__user">
-                                                <h2 class="testimonials__user-name">Lauren Gilmore</h2>
-                                                <p class="testimonials__user-dir">Disigner</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonials__slide">
-                                    <img src="images/slider.png" alt="" class="img-first">
-                                    <img src="images/slider2.png" alt="" class="img-second">
-                                    <div class="testimonials__slide-inner">
-                                        <div class="testimonials__user-photo">
-                                            <img src="images/user1.jpg" alt="">
-                                        </div>
-                                        <div class="testimonials__content">
-                                            <blockquote class="testimonials__content-quote">
-                                                <p>Crokio's team is outstanding, demonstrating creativity, focus, and flexibility throughout the process. I highly recommend their services to anyone in need. Their commitment to delivering first-class service sets them apart from the competition.</p>
-                                            </blockquote>
-                                            <div class="testimonials__user">
-                                                <h2 class="testimonials__user-name">Lauren Gilmore</h2>
-                                                <p class="testimonials__user-dir">Disigner</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonials__slide">
-                                    <img src="images/slider.png" alt="" class="img-first">
-                                    <img src="images/slider2.png" alt="" class="img-second">
-                                    <div class="testimonials__slide-inner">
-                                        <div class="testimonials__user-photo">
-                                            <img src="images/user1.jpg" alt="">
-                                        </div>
-                                        <div class="testimonials__content">
-                                            <blockquote class="testimonials__content-quote">
-                                                <p>Crokio's team is outstanding, demonstrating creativity, focus, and flexibility throughout the process. I highly recommend their services to anyone in need. Their commitment to delivering first-class service sets them apart from the competition.</p>
+                                                <p>Crokio, the marketing and web agency we collaborated with, impressed us with their ability to tailor their approach to different decision-makers, providing deep technical insights while maintaining clarity for all. Their expertise and responsiveness in addressing our inquiries were exceptional, making them a highly recommended choice in the industry.</p>
                                             </blockquote>
                                             <div class="testimonials__user">
                                                 <h2 class="testimonials__user-name">Lauren Gilmore</h2>
@@ -1102,7 +1067,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__business panel" data-color="white">
+            <section class="main__business panel price-business" data-color="white">
                 <div class="container">
                     <div class="business__inner">
                         <div class="business__box anim-items">
@@ -1139,16 +1104,19 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link head">Main</a>
+                                    <a href="index.html" class="footer__nav-link head">Main</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link">Pricing</a>
+                                    <a href="#" class="footer__nav-link">How it Work</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link">FAQ</a>
+                                    <a href="#" class="footer__nav-link">Showcase</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link">Contact Us</a>
+                                    <a href="pricing.html" class="footer__nav-link">Pricing</a>
+                                </li>
+                                <li class="footer__nav-item">
+                                    <a href="call.html" class="footer__nav-link">Contact Us</a>
                                 </li>
                             </ul>
                         </nav>
