--- a/call.html
+++ b/call.html
@@ -28,13 +28,13 @@
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
+                                    <a class="header__nav-link" href="works.html">How it Works</a>
+                                </li>
+                                <li class="header__nav-item">
                                     <a class="header__nav-link" href="showcase.html">Showcase</a>
                                 </li>
                                 <li class="header__nav-item">
                                     <a class="header__nav-link" href="pricing.html">Pricing</a>
-                                </li>
-                                <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Apply as a Talent</a>
                                 </li>
                             </ul>
                             <button class="header__nav-button button" onclick="document.location='call.html'">Book a Call</button>
@@ -83,7 +83,7 @@
                                     <a href="index.html" class="footer__nav-link head">Main</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link">How it Work</a>
+                                    <a href="#" class="footer__nav-link">How it Works</a>
                                 </li>
                                 <li class="footer__nav-item">
                                     <a href="#" class="footer__nav-link">Showcase</a>
