--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
-                                    <a class="header__nav-link" href="works.html">How it Work</a>
+                                    <a class="header__nav-link" href="works.html">How it Works</a>
                                 </li>
                                 <li class="header__nav-item">
                                     <a class="header__nav-link" href="showcase.html">Showcase</a>
@@ -1720,7 +1720,7 @@
                                     <a href="/" class="footer__nav-link head">Main</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a href="#" class="footer__nav-link">How it Work</a>
+                                    <a href="#" class="footer__nav-link">How it Works</a>
                                 </li>
                                 <li class="footer__nav-item">
                                     <a href="#" class="footer__nav-link">Showcase</a>
