--- a/call.html
+++ b/call.html
@@ -46,15 +46,9 @@
         <main class="main">
             <section class="main__meet">
                 <div class="container">
-                    <div class="meet__heading">
-                        <h1 class="meet__heading-title">How can Crokio help me achieve my business goals?</h1>
-                        <h2 class="meet__heading-tittle">We are ready to give you the answer!</h2>
-                        <p class="meet__heading-text">Schedule a 15-minute discovery call to learn how Crokio can help scale your business with outsourcing.</p>
-                    </div>
                     <div class="meet__calendar">
                         <div class="calendly-inline-widget" data-url="https://calendly.com/crokio" style="min-width:320px;height:700px;"></div>
                         <div class="meet__calendar-img"><img src="images/servi/vid-ico.png" alt=""></div>
-                        <div class="meet__calendar-imgs"><img src="images/ico/3.png" alt=""></div>
                     </div>
                 </div>
             </section>
@@ -129,6 +123,6 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
