--- a/pricing.html
+++ b/pricing.html
@@ -86,9 +86,9 @@
             <section class="main__inclusive">
                 <div class="container">
                     <div class="inclusive__inner">
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="business">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-hover" id="business">
+                            <div class="inclusive__box box-hover">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -184,9 +184,9 @@
                                 <button class="inclusive__button price-btns button" href="#bus__disc-first" onclick="comPrice()">Need an additional discount?</button>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="commerce">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-two active box-hover" id="commerce">
+                            <div class="inclusive__box box-two active box-hover">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -282,8 +282,9 @@
                                 <button class="inclusive__button price-btns button" href="#com__disc-first" onclick="businessPrice()">Need an additional discount?</button>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
-                            <div class="inclusive__box box-three box-hover" id="custom">
+                        <div class="inclusive-wrapper" id="custom">
+                            <div class="inclusive-shadow"></div>
+                            <div class="inclusive__box box-three box-hover">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -378,9 +379,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="bus__disc-first">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-four" id="bus__disc-first">
+                            <div class="inclusive__box box-four">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -480,9 +481,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="com__disc-first">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-seven" id="com__disc-first">
+                            <div class="inclusive__box box-seven">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -582,9 +583,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="bus__disc-second">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-sex" id="bus__disc-second">
+                            <div class="inclusive__box box-sex">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
@@ -681,9 +682,9 @@
                                 <button class="inclusive__buttons button returns" href="#business" onclick="comfirstPrice()">Return to monthly subscription</button>
                             </div>
                         </div>
-                        <div class="inclusive-wrapper">
+                        <div class="inclusive-wrapper" id="com__disc-second">
                             <div class="inclusive-shadow"></div>
-                            <div class="inclusive__box box-eight" id="com__disc-second">
+                            <div class="inclusive__box box-eight">
                                 <div class="inclusive__box-img">
                                     <img src="images/servi/web-ico.png" alt="" class="inclusive-img-first">
                                     <img src="images/servi/sun.png" alt="" class="inclusive-img-second">
