--- a/call.html
+++ b/call.html
@@ -47,7 +47,7 @@
             <section class="main__meet">
                 <div class="container">
                     <div class="meet__calendar">
-                        <div class="calendly-inline-widget" data-url="https://calendly.com/crokio" style="min-width:320px;height:700px;"></div>
+                        <div class="calendly-inline-widget" data-url="https://calendly.com/crokio"></div>
                         <div class="meet__calendar-img"><img src="images/servi/vid-ico.png" alt=""></div>
                     </div>
                 </div>
