--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
                             <!-- <p class="pricing__heading-text">Choose the nature of your business or the type of industry you are involved in?</p> -->
                         </div>
                         <div class="card__box">
-                            <button class="card__box-item price-btns bt" href="#business" onclick="busfirstPrice()">
+                            <a class="card__box-item price-btns bt" href="#business" onclick="busfirstPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -60,8 +60,8 @@
                                     </h2>
                                     <p class="card__box-text">Package is tailored for businesses looking to sell products or services online. It includes all the features of the Business Package, along with additional e-commerce-specific functionalities.</p>
                                 </div>
-                            </button>
-                            <button class="card__box-item price-btns bt active" href="#commerce" onclick="comfirstPrice()">
+                            </a>
+                            <a class="card__box-item price-btns bt active" href="#commerce" onclick="comfirstPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -69,8 +69,8 @@
                                     </h2>
                                     <p class="card__box-text">The Business Package is designed to cater to small and medium-sized businesses. It includes essential web development and marketing services to establish a strong online presence.</p>
                                 </div>
-                            </button>
-                            <button class="card__box-item price-btns bt" href="#custom" onclick="customPrice()">
+                            </a>
+                            <a class="card__box-item price-btns bt" href="#custom" onclick="customPrice()">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -78,7 +78,7 @@
                                     </h2>
                                     <p class="card__box-text">The Custom Package is designed for businesses with unique requirements or complex projects. It offers tailor-made solutions to address specific needs.</p>
                                 </div>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <button class="inclusive__button price-btns button" href="#bus__disc-first" onclick="comPrice()">Need an additional discount?</button>
+                                <a class="inclusive__button price-btns button" href="#bus__disc-first" onclick="comPrice()">Need an additional discount?</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="commerce">
@@ -279,7 +279,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <button class="inclusive__button price-btns button" href="#com__disc-first" onclick="businessPrice()">Need an additional discount?</button>
+                                <a class="inclusive__button price-btns button" href="#com__disc-first" onclick="businessPrice()">Need an additional discount?</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="custom">
@@ -476,8 +476,8 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__btn-box">
-                                    <button class="inclusive__btns button return" href="#business" onclick="busfirstPrice()">Return to monthly subscription</button>
-                                    <button class="inclusive__btn price-btns button" href="#bus__disc-second" onclick="comsPrice()">Need an additional discount?</button>
+                                    <a class="inclusive__btns button return" href="#business" onclick="busfirstPrice()">Return to monthly subscription</a>
+                                    <a class="inclusive__btn price-btns button" href="#bus__disc-second" onclick="comsPrice()">Need an additional discount?</a>
                                 </div>
                             </div>
                         </div>
@@ -578,8 +578,8 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__btn-box">
-                                    <button class="inclusive__btns button retur" href="#commerce" onclick="comfirstPrice()">Return to monthly subscription</button>
-                                    <button class="inclusive__btn price-btns button" href="#com__disc-second" onclick="businesPrice()">Need an additional discount?</button>
+                                    <a class="inclusive__btns button retur" href="#commerce" onclick="comfirstPrice()">Return to monthly subscription</a>
+                                    <a class="inclusive__btn price-btns button" href="#com__disc-second" onclick="businesPrice()">Need an additional discount?</a>
                                 </div>
                             </div>
                         </div>
@@ -679,7 +679,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <button class="inclusive__buttons button returns" href="#business" onclick="comfirstPrice()">Return to monthly subscription</button>
+                                <a class="inclusive__buttons button returns" href="#business" onclick="comfirstPrice()">Return to monthly subscription</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="com__disc-second">
@@ -778,7 +778,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <button class="inclusive__buttons button returs" href="#commerce" onclick="busfirstPrice()">Return to monthly subscription</button>
+                                <a class="inclusive__buttons button returs" href="#commerce" onclick="busfirstPrice()">Return to monthly subscription</a>
                             </div>
                         </div>
                     </div>
