--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                             <p class="header__heading-text">At Crokio, we are different. With a unique model that involves hiring dedicated teams, we can replace multiple employees while delivering outstanding results.In the end, you are left with lower costs and excellent digital creative work from a flexible monthly membership. What’s not to love?</p>
                         </div>
                         <div class="header__btn">
-                            <button class="header__btn-button button" onclick="document.location='call.html'">Book a Discovery Call</button>
-                            <button class="header__btn-btn btn">Get Started</button>
+                            <button class="header__btn-button button call" href="#">Book a Discovery Call</button>
+                            <button class="header__btn-btn btn" onclick="document.location='pricing.html'">Get Started</button>
                         </div>
                         <div class="header__row">
                             <ul class="header__row-list">
@@ -477,7 +477,7 @@
                         <div class="cover__heading">
                             <h1 class="cover__heading-title">Cover ALL Your Online Needs With One Monthly Subscription</h1>
                             <p class="cover__heading-text">Drive meaningful and measurable results, such as increased brand awareness, customer engagement, lead generation, conversion rates, and ultimately, revenue growth.</p>
-                            <button class="cover__heading-btn button">Get Started</button>
+                            <button class="cover__heading-btn button" onclick="document.location='pricing.html'">Get Started</button>
                         </div>
                         <div class="cover__row">
                             <ul class="cover__row-list">
@@ -1691,7 +1691,7 @@
                                 <h1 class="business__content-title">Achieve Scalable Online business growth without the complexities</h1>
                                 <p class="business__content-text">Why recruit an entire staff when you can have your own creative dream team today?</p>
                                 <div class="business__btn">
-                                    <button class="business__btn-button button" onclick="document.location='call.html'">Book a Discovery Call</button>
+                                    <button class="business__btn-button button call" href="#">Book a Discovery Call</button>
                                     <button class="business__btn-btn btn">Pricing Plans</button>
                                 </div>
                             </div>
@@ -1715,7 +1715,7 @@
                                 <div class="footer__logo-second" href="#"><img src="images/logow1.png" alt=""></div>
                             </a>
                             <div class="footer__buttons-box">
-                                <button class="footer__button btn" onclick="document.location='call.html'">Book a Discovery Call</button>
+                                <button class="footer__button btn call" href="#">Book a Discovery Call</button>
                             </div>
                         </div>
                         <nav class="footer__nav">
