--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
                             <!-- <p class="pricing__heading-text">Choose the nature of your business or the type of industry you are involved in?</p> -->
                         </div>
                         <div class="card__box">
-                            <a class="card__box-item price-btns bt" href="#business" onclick="busfirstPrice()">
+                            <a class="card__box-item price-btns bt" href="#inner">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -66,7 +66,7 @@
                                     <p class="card__box-text">Package is tailored for businesses looking to sell products or services online. It includes all the features of the Business Package, along with additional e-commerce-specific functionalities.</p>
                                 </div>
                             </a>
-                            <a class="card__box-item price-btns bt active" href="#commerce" onclick="comfirstPrice()">
+                            <a class="card__box-item price-btns bt active" href="#inner">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -75,7 +75,7 @@
                                     <p class="card__box-text">The Business Package is designed to cater to small and medium-sized businesses. It includes essential web development and marketing services to establish a strong online presence.</p>
                                 </div>
                             </a>
-                            <a class="card__box-item price-btns bt" href="#custom" onclick="customPrice()">
+                            <a class="card__box-item price-btns bt" href="#inner">
                                 <div class="card__box-content">
                                     <h2 class="card__box-title">
                                         <span></span>
@@ -90,7 +90,7 @@
             </section>
             <section class="main__inclusive">
                 <div class="container">
-                    <div class="inclusive__inner">
+                    <div class="inclusive__inner" id="inner">
                         <div class="inclusive-wrapper" id="business">
                             <div class="inclusive-shadow"></div>
                             <div class="inclusive__box box-hover">
@@ -186,7 +186,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <a class="inclusive__button price-btns button" href="#bus__disc-first" onclick="comPrice()">Need an additional discount?</a>
+                                <a class="inclusive__button price-btns button" href="#inner">Need an additional discount?</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="commerce">
@@ -284,7 +284,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <a class="inclusive__button price-btns button" href="#com__disc-first" onclick="businessPrice()">Need an additional discount?</a>
+                                <a class="inclusive__button price-btns button" href="#inner">Need an additional discount?</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="custom">
@@ -481,8 +481,8 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__btn-box">
-                                    <a class="inclusive__btns button return" href="#business" onclick="busfirstPrice()">Return to monthly subscription</a>
-                                    <a class="inclusive__btn price-btns button" href="#bus__disc-second" onclick="comsPrice()">Need an additional discount?</a>
+                                    <a class="inclusive__btns button return" href="#inner">Return to monthly subscription</a>
+                                    <a class="inclusive__btn price-btns button" href="#inner">Need an additional discount?</a>
                                 </div>
                             </div>
                         </div>
@@ -583,8 +583,8 @@
                                     </div>
                                 </div>
                                 <div class="inclusive__btn-box">
-                                    <a class="inclusive__btns button retur" href="#commerce" onclick="comfirstPrice()">Return to monthly subscription</a>
-                                    <a class="inclusive__btn price-btns button" href="#com__disc-second" onclick="businesPrice()">Need an additional discount?</a>
+                                    <a class="inclusive__btns button retur" href="#inner">Return to monthly subscription</a>
+                                    <a class="inclusive__btn price-btns button" href="#inner">Need an additional discount?</a>
                                 </div>
                             </div>
                         </div>
@@ -684,7 +684,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <a class="inclusive__buttons button returns" href="#business" onclick="comfirstPrice()">Return to monthly subscription</a>
+                                <a class="inclusive__buttons button returns" href="#inner">Return to monthly subscription</a>
                             </div>
                         </div>
                         <div class="inclusive-wrapper" id="com__disc-second">
@@ -783,7 +783,7 @@
                                         <p class="inclusive__price-text">100% Satisfaction Guarantee</p>
                                     </div>
                                 </div>
-                                <a class="inclusive__buttons button returs" href="#commerce" onclick="busfirstPrice()">Return to monthly subscription</a>
+                                <a class="inclusive__buttons button returs" href="#inner">Return to monthly subscription</a>
                             </div>
                         </div>
                     </div>
